--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="hero-right">
         <div class="bg-skew"></div>
-        <img src="./assets/profile.jpg" alt="Chrisha Willer" />
+        <img src="./assets/intro.jpg" alt="Chrisha Willer" />
       </div>
     </section>
   </div>
